--- a/_layouts/recordings.html
+++ b/_layouts/recordings.html
@@ -11,6 +11,7 @@ layout: default
         <audio>
             <source src="/assets/sound/{{rec.src}}">
         </audio>
+        <span class="recording-date">{{ rec.date }}</span>
     </li>
     {% endfor %}
 </ul>
