--- a/_includes/key.html
+++ b/_includes/key.html
@@ -1,5 +1,5 @@
 <ul class="tags-key">
-  key
+  <li>---</li>
   <li class="tags-key">
     <span class="pixel design"></span> design
   </li>
@@ -7,7 +7,6 @@
     <span class="pixel code"></span> code
   </li>
   <li class="tags-key">
-    <span class="pixel other"></span> other (i.e. ads, hardware)
+    <span class="pixel other"></span> other (i.e. hardware, pm, ads)
   </li>
-  ---
 </ul>
