--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
     <div class="row">
         <div class="col-xs-3 sidebar">
             {% include header.html %}
-            <!--{% include key.html %}-->
             {% include nav.html %}
+            {% include key.html %}
         </div>
         <main class="col-sm-9 col-lg-7 main-content">
             {{ content }}
