--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,144 +1,146 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="{{ '/assets/js/bootstrap.js' }}"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <script
-          src="https://code.jquery.com/jquery-3.3.1.min.js"
-          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-          crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  {% seo %}
-
-  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <!--[if lt IE 9]>
-  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="description" content="A stream of projects & thoughts"/>
+    <meta name="keywords" content="design, code, libraries, library, experiments, anastasia aizman"/>
+    <title>A stream of projects and thoughts</title>
 </head>
 <body>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-3 sidebar">
-      {% include header.html %}
-      <!--{% include key.html %}-->
-      {% include nav.html %}
-    </div>
-    <main class="col-sm-9 col-lg-7 main-content">
-      <div class="project-title">{{ page.title }}</div>
-      <div class="description-text">
+    <div class="row">
+        <div class="col-xs-3 sidebar">
+            {% include header.html %}
+            {% include nav.html %}
+            {% include key.html %}
+        </div>
+        <main class="col-sm-9 col-lg-7 main-content">
+            <div class="project-title">{{ page.title }}</div>
+            <div class="description-text">
 
-        <p class="project-links">
-          {% if page.github %}
-          <span>
+                <p class="project-links">
+                    {% if page.github %}
+                    <span>
             [<a href="https://github.com/{{ page.github }}"> code </a>]
           </span>
-          {% endif %}
-          {% if page.website %}
-          <span>[<a href="{{ page.website }}"> website </a></span>]
-          {% endif %}
-        </p>
-        {{ page.description }}
-      </div>
-      {% if page.carousel_0 %}
+                    {% endif %}
+                    {% if page.website %}
+                    <span>[<a href="{{ page.website }}"> website </a></span>]
+                    {% endif %}
+                </p>
+                {{ page.description }}
+            </div>
+            {% if page.carousel_0 %}
 
-      <div id="carouselExampleControls" class="carousel slide" data-interval="false">
-        <div class="carousel-inner">
-          {% for image in page.carousel_0 %}
-          <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
-            <img class="d-block w-100" src="/assets/img/{{image.image}}"
-                 alt="{% if image.desc %}{{ image.desc }}{% endif %}">
-            {% if image.desc %}
-            <div class="carousel-caption d-none d-md-block">
-              <p class="image-description float-right">{{ image.desc }}</p>
+            <div id="carouselExampleControls" class="carousel slide" data-interval="false">
+                <div class="carousel-inner">
+                    {% for image in page.carousel_0 %}
+                    <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
+                        <img class="d-block w-100" src="/assets/img/{{image.image}}"
+                             alt="{% if image.desc %}{{ image.desc }}{% endif %}">
+                        {% if image.desc %}
+                        <div class="carousel-caption d-none d-md-block">
+                            <p class="image-description float-right">{{ image.desc }}</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            {% if page.carousel_0_desc %}
+            <div class="description-text carousel-description">
+                {{page.carousel_0_desc}}
             </div>
             {% endif %}
-          </div>
-          {% endfor %}
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-      {% if page.carousel_0_desc %}
-      <div class="description-text carousel-description">
-        {{page.carousel_0_desc}}
-      </div>
-      {% endif %}
-      {% endif %}
+            {% endif %}
 
-      {% if page.description_0 %}
-      <div class="description-text">
-        {{ page.description_0 }}
-      </div>
-      {% endif %}
-
-      {% for image in page.images %}
-      <a target="_blank" href="/assets/img/{{image}}">
-        <img src="/assets/img/{{image}}">
-      </a>
-      {% endfor %}
-      {% if page.slug == 'stacker' %}
-      <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack"
-              class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
-      {% endif %}
-
-      {% for image in page.images_desc %}
-      <ul class="project-list">
-        <li>
-          <a target="_blank" href="/assets/img/{{image.image}}">
-            <img src="/assets/img/{{image.image}}"/>
-          </a>
-          <span class="image-description float-right">{{ image.desc }}</span>
-          <br/><br/>
-        </li>
-      </ul>
-      {% endfor %}
-
-      {% if page.carousel_1 %}
-
-      <div id="carouselExampleControls2" class="carousel slide" data-interval="false">
-        <div class="carousel-inner">
-          {% for image in page.carousel_1 %}
-          <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
-            <img class="d-block w-100" src="/assets/img/{{image.image}}" alt="{{ image.desc }}">
-            {% if image.desc %}
-            <div class="carousel-caption d-none d-md-block">
-              <p class="float-right">{{ image.desc }}</p>
+            {% if page.description_0 %}
+            <div class="description-text">
+                {{ page.description_0 }}
             </div>
             {% endif %}
-          </div>
-          {% endfor %}
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-      {% if page.carousel_1_desc %}
-      <div class="description-text carousel-description">
-        {{page.carousel_1_desc}}
-      </div>
-      {% endif %}
+
+            {% for image in page.images %}
+            <a target="_blank" href="/assets/img/{{image}}">
+                <img src="/assets/img/{{image}}">
+            </a>
+            {% endfor %}
+            {% if page.slug == 'stacker' %}
+            <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack"
+                    class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
+            {% endif %}
+
+            {% for image in page.images_desc %}
+            <ul class="project-list">
+                <li>
+                    <a target="_blank" href="/assets/img/{{image.image}}">
+                        <img src="/assets/img/{{image.image}}"/>
+                    </a>
+                    <span class="image-description float-right">{{ image.desc }}</span>
+                    <br/><br/>
+                </li>
+            </ul>
+            {% endfor %}
+
+            {% if page.carousel_1 %}
+
+            <div id="carouselExampleControls2" class="carousel slide" data-interval="false">
+                <div class="carousel-inner">
+                    {% for image in page.carousel_1 %}
+                    <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
+                        <img class="d-block w-100" src="/assets/img/{{image.image}}" alt="{{ image.desc }}">
+                        {% if image.desc %}
+                        <div class="carousel-caption d-none d-md-block">
+                            <p class="float-right">{{ image.desc }}</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            {% if page.carousel_1_desc %}
+            <div class="description-text carousel-description">
+                {{page.carousel_1_desc}}
+            </div>
+            {% endif %}
 
 
-      {% endif %}
+            {% endif %}
 
-    </main>
-  </div>
+        </main>
+    </div>
 </div>
 </body>
 </html>
