add - more sounds

--- a/_layouts/recordings.html
+++ b/_layouts/recordings.html
@@ -19,7 +19,7 @@ title: ""
 </ul>
 
 <script>
-    let colors = ['pink', 'greenish', 'blue', 'yellowish']
+    let colors = ['pink', 'greenish', 'blue', 'yellowish', 'purplish']
     let color;
     $.each($('.recording'), (key, rec) => {
         color = colors[Math.floor(Math.random() * Math.floor(colors.length))]
