--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,42 +1,46 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  {% seo %}
+    {% seo %}
 
-  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <!--[if lt IE 9]>
-  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 
 <body>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-3 sidebar">
-      {% include header.html %}
-      <!--{% include key.html %}-->
-      {% include nav.html %}
+    <div class="row">
+        <div class="col-12">
+            {% include header.html %}
+        </div>
     </div>
+    <div class="row">
+        <div class="" id="sidebar">
+            {% include nav.html %}
+            {% include key.html %}
+        </div>
 
-    <div class="col-sm-9 col-lg-6 main-content">
-      <div class="description-text">
-        {{ page.description }}
-      </div>
+        <div class="main-content">
+            <div class="description-text">
+                {{ page.description }}
+            </div>
 
-      {% for image in page.images %}
-      <img src="/assets/img/{{image}}">
-      {% endfor %}
+            {% for image in page.images %}
+            <img src="/assets/img/{{image}}">
+            {% endfor %}
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
