fix - sidebar, remove info

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <div class="header">
-    <a class="d-md-none" href="{{ site.github.url }}">
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-    </a>
-    <a href="#" class="d-sm-inline d-md-none" id="menu">menu</a>
+<!--    <a class="d-sm-none" href="{{ site.github.url }}">-->
+<!--        <h1>{{ site.title | default: site.github.repository_name }}</h1>-->
+<!--    </a>-->
+    <a href="#" class="d-sm-inline d-md-none h5" id="menu"><<</a>
     <p class="d-md-none site-description">
         {{ site.description | default: site.github.project_tagline }}
     </p>
