--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,12 @@
 <ul>
-    <a class="d-sm-inline d-md-inline" href="{{ site.github.url }}">
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-    </a>
+<!--    <a class="d-sm-none d-md-inline" href="{{ site.github.url }}">-->
+<!--        <h1>{{ site.title | default: site.github.repository_name }}</h1>-->
+<!--    </a>-->
     <div class="d-sm-inline d-md-none">
-        <a href="#" class="float-right" id="exit-menu"><img src="/assets/img/icons/close-24px.svg"></a>
+<!--        <a href="#" class="float-right" id="exit-menu"><img src="/assets/img/icons/close-24px.svg"></a>-->
+        <a href="#" class="float-right h5" id="exit-menu">>></a>
     </div>
-    <p class="d-sm-inline d-md-inline site-description">
+    <p class="d-xs-none d-sm-none d-md-inline site-description">
         {{ site.description | <def></def>ault: site.github.project_tagline }}
     </p>
     <br/>
