--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,6 @@
 <div class="header">
-<!--    <a class="d-sm-none" href="{{ site.github.url }}">-->
-<!--        <h1>{{ site.title | default: site.github.repository_name }}</h1>-->
-<!--    </a>-->
-    <a href="#" class="d-sm-inline d-md-none h5" id="menu"><<</a>
-    <p class="d-md-none site-description">
-        {{ site.description | default: site.github.project_tagline }}
-    </p>
-    <p class="d-md-none">---</p>
-    <!--<ul>
-        {% for page in site.pages %}
-        {% if page.permalink %}
-        <li class="list-item page">
-            [ <a href="{{ page.permalink }}"> {{ page.title }} </a> ]
-        </li>
-        {% endif %}
-        {% endfor %}
-    </ul>-->
+  <a href="#" class="d-sm-inline d-md-none h5" id="menu">&#8810;</a>
+  <p class="d-md-none site-description">
+    {{ site.description | default: site.github.project_tagline }}
+  </p>
 </div>
