--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,155 +1,161 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
-    <script src="{{ '/assets/js/bootstrap.js' }}"></script>
-    <!-- custom -->
-    <script src="{{ '/assets/js/menu.js' }}"></script>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"></script>
+  <!-- Bootstrap JS -->
+  <script src="{{ '/assets/js/bootstrap.js' }}"></script>
+  <!-- custom -->
+  <script src="{{ '/assets/js/menu.js' }}"></script>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="description" content="A stream of projects & thoughts"/>
-    <meta name="keywords" content="design, code, libraries, library, experiments, anastasia aizman"/>
-    <title>A stream of projects and thoughts</title>
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <meta name="description" content="A stream of projects & thoughts"/>
+  <meta name="keywords" content="design, code, libraries, library, experiments, anastasia aizman"/>
+  <title>A stream of projects and thoughts</title>
 </head>
 <body>
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            {% include header.html %}
-        </div>
+  <div class="row">
+    <div class="col-12">
+      {% include header.html %}
     </div>
-    <div class="row">
-        <div class="" id="sidebar">
-            {% include nav.html %}
-            {% include key.html %}
-        </div>
-        <main class="main-content">
-            <div class="project-title">{{ page.title }}</div>
-            <div class="description-text">
+  </div>
+  <div class="row">
+    <div class="" id="sidebar">
+      {% include nav.html %}
+      {% include key.html %}
+    </div>
+    <main class="main-content">
+      <div class="project-title">{{ page.title }}</div>
+      <div class="description-text">
 
-                <p class="project-links">
-                    {% if page.github %}
-                    <span>
+        <p class="project-links">
+          {% if page.github %}
+          <span>
                 [<a href="https://github.com/{{ page.github }}"> code </a>]
               </span>
-                    {% endif %}
-                    {% if page.website %}
-                    <span>[<a href="{{ page.website }}"> website </a></span>]
-                    {% endif %}
-                </p>
-                {{ page.description }}
-            </div>
-            {% if page.carousel_0 %}
+          {% endif %}
+          {% if page.website %}
+          <span>[<a href="{{ page.website }}"> website </a></span>]
+          {% endif %}
+        </p>
+        {{ page.description }}
+      </div>
+      {% if page.carousel_0 %}
 
-            <div id="carouselExampleControls" class="carousel slide" data-interval="false">
-                <div class="carousel-inner">
-                    {% for image in page.carousel_0 %}
-                    <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
-                        <img class="d-block w-100" src="/assets/img/{{image.image}}"
-                             alt="{% if image.desc %}{{ image.desc }}{% endif %}">
-                        {% if image.desc %}
-                        <div class="carousel-caption d-none d-md-block">
-                            <p class="image-description">{{ image.desc }}</p>
-                        </div>
-                        {% endif %}
-                    </div>
-                    {% endfor %}
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-            {% if page.carousel_0_desc %}
-            <div class="description-text carousel-description">
-                {{page.carousel_0_desc}}
+      <div id="carouselExampleControls" class="carousel slide" data-interval="false">
+        <div class="carousel-inner">
+          {% for image in page.carousel_0 %}
+          <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
+            <img class="d-block w-100" src="/assets/img/{{image.image}}"
+                 alt="{% if image.desc %}{{ image.desc }}{% endif %}">
+            {% if image.desc %}
+            <div class="carousel-caption d-none d-md-block">
+              <p class="image-description">{{ image.desc }}</p>
             </div>
             {% endif %}
-            {% endif %}
+          </div>
+          {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      {% if page.carousel_0_desc %}
+      <div class="description-text carousel-description">
+        {{page.carousel_0_desc}}
+      </div>
+      {% endif %}
+      {% endif %}
 
-            {% if page.description_0 %}
-            <div class="description-text">
-                {{ page.description_0 }}
-            </div>
-            {% endif %}
+      {% if page.description_0 %}
+      <div class="description-text">
+        {{ page.description_0 }}
+      </div>
+      {% endif %}
 
-            {% for image in page.images %}
-            <a target="_blank" href="/assets/img/{{image}}">
-                <img src="/assets/img/{{image}}">
+      {% for image in page.images %}
+      <a target="_blank" href="/assets/img/{{image}}">
+        <img src="/assets/img/{{image}}">
+      </a>
+      {% endfor %}
+      {% if page.slug == 'stacker' %}
+      <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack"
+              class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
+      {% endif %}
+
+      <ul class="project-list">
+          {% for obj in page.media %}
+        <li>
+          {% if obj.link %}
+          <a target="_blank" href="{{obj.link}}">
+            {% else %}
+            <a target="_blank" href="/assets/img/{{obj.obj}}">
+              {% endif%}
+              {% if obj.type == 'video' %}
+              <video width="850" controls>
+                <source src="/assets/img/{{ obj.video }}" type="video/mp4">
+              </video>
+              {% else %}
+                  <img src="/assets/img/{{obj.image}}" class="{{image.img_class}}"/>
+              {% endif %}
             </a>
-            {% endfor %}
-            {% if page.slug == 'stacker' %}
-            <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack"
-                    class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
-            {% endif %}
+            <label class="image-description">{{ obj.desc }}</label>
+        </li>
+        {% endfor %}
+      </ul>
 
-            <ul class="project-list">
-                {% for image in page.images_desc %}
-                <li>
-                    {% if image.link %}
-                        <a target="_blank" href="{{image.link}}">
-                    {% else %}
-                        <a target="_blank" href="/assets/img/{{image.image}}">
-                    {% endif%}
-                        <img src="/assets/img/{{image.image}}" class="{{image.img_class}}"/>
-                    </a>
-                    <label class="image-description">{{ image.desc }}</label>
-                </li>
-                {% endfor %}
-            </ul>
+      {% if page.carousel_1 %}
 
-            {% if page.carousel_1 %}
-
-            <div id="carouselExampleControls2" class="carousel slide" data-interval="false">
-                <div class="carousel-inner">
-                    {% for image in page.carousel_1 %}
-                    <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
-                        <img class="d-block w-100" src="/assets/img/{{image.image}}" alt="{{ image.desc }}">
-                        {% if image.desc %}
-                        <div class="carousel-caption d-none d-md-block">
-                            <p>{{ image.desc }}</p>
-                        </div>
-                        {% endif %}
-                    </div>
-                    {% endfor %}
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-            {% if page.carousel_1_desc %}
-            <div class="description-text carousel-description">
-                {{page.carousel_1_desc}}
+      <div id="carouselExampleControls2" class="carousel slide" data-interval="false">
+        <div class="carousel-inner">
+          {% for image in page.carousel_1 %}
+          <div class="carousel-item {% if forloop.index0 == 0 %}active{% endif %}">
+            <img class="d-block w-100" src="/assets/img/{{image.image}}" alt="{{ image.desc }}">
+            {% if image.desc %}
+            <div class="carousel-caption d-none d-md-block">
+              <p>{{ image.desc }}</p>
             </div>
             {% endif %}
+          </div>
+          {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      {% if page.carousel_1_desc %}
+      <div class="description-text carousel-description">
+        {{page.carousel_1_desc}}
+      </div>
+      {% endif %}
 
 
-            {% endif %}
+      {% endif %}
 
-        </main>
-    </div>
+    </main>
+  </div>
 </div>
 </body>
 </html>
