--- a/_includes/key.html
+++ b/_includes/key.html
@@ -1,12 +1,18 @@
 <ul class="tags-key">
   <li>---</li>
   <li class="tags-key">
-    <span class="pixel design"></span> design
-  </li>
-  <li class="tags-key">
     <span class="pixel code"></span> code
   </li>
   <li class="tags-key">
-    <span class="pixel other"></span> other (i.e. hardware, pm, ads)
+    <span class="pixel design"></span> design
+  </li>
+  <li class="tags-key">
+    <span class="pixel hardware"></span> hardware
+  </li>
+  <li class="tags-key">
+    <span class="pixel pm"></span> pm
+  </li>
+  <li class="tags-key">
+    <span class="pixel ads"></span> ads
   </li>
 </ul>
